# iced-secret-santa

./: Cargo.toml  LICENSE  README.md
src/: clip.rs  icon.rs  main.rs  participant.rs  result_row.rs  theme.rs
